src/test/deca/syntax/invalid/declClass-wrongOrder.synt
declClass-wrongOrder.deca:1: